--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,22 @@ dependencies:
   firebase_core: ^2.8.0
   image_picker: ^0.8.7
   url_launcher: ^6.1.10
-  intl: ^0.18.0
+  intl: ^0.17.0
   firebase_storage: ^11.0.16
   cloud_firestore: ^4.4.5
   firebase_auth: ^4.2.2
   google_fonts: ^4.0.3
-
+  dcdg: ^4.1.0
+  shared_preferences: ^2.0.20
+  stripe_payment: ^1.1.4
+  easy_localization: ^3.0.1
+  expandable_text: ^2.3.0
+  slang: ^3.16.2
+  photo_view: ^0.14.0
+  geolocator: ^8.0.0
+  geocoding: ^2.0.1
+  get_storage: ^2.1.1
+  animated_splash_screen: ^1.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -67,9 +77,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/translations/
+    - assets/images/shop.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
